bk_ida/gccida/g0/record_giv
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6076:1: error: unknown type name 'induction_1'
induction_1 *v, 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6084:1: error: must use 'enum' tag to refer to type 'g_types'
g_types type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6095:1: error: use of undeclared identifier 'induction_1'
induction_1 *b; // [rsp+58h] [rbp-8h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6095:14: error: use of undeclared identifier 'b'
induction_1 *b; // [rsp+58h] [rbp-8h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6096:1: error: use of undeclared identifier 'induction_1'
induction_1 *ba; // [rsp+58h] [rbp-8h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6096:14: error: use of undeclared identifier 'ba'
induction_1 *ba; // [rsp+58h] [rbp-8h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6102:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6110:13: error: expected identifier or '('
 struct set = v13; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6175:7: error: use of undeclared identifier 'b'
for ( b = bl_0->biv; b; b = b->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6175:22: error: use of undeclared identifier 'b'
for ( b = bl_0->biv; b; b = b->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6175:25: error: use of undeclared identifier 'b'
for ( b = bl_0->biv; b; b = b->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6175:29: error: use of undeclared identifier 'b'
for ( b = bl_0->biv; b; b = b->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6177:6: error: use of undeclared identifier 'b'
if ( b->insn->fld[0].rtint >= max_uid_for_loop ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6179:31: error: use of undeclared identifier 'b'
if ( *( ( _DWORD *)uid_luid + b->insn->fld[0].rtint) >= *( ( _DWORD *)uid_luid 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6182:6: error: use of undeclared identifier 'b'
if ( b->insn->fld[0].rtint >= max_uid_for_loop ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6184:31: error: use of undeclared identifier 'b'
if ( *( ( _DWORD *)uid_luid + b->insn->fld[0].rtint) <= *( ( _DWORD *)uid_luid 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6197:7: error: use of undeclared identifier 'ba'
for ( ba = bl_0->biv; ba; ba = ba->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6197:23: error: use of undeclared identifier 'ba'
for ( ba = bl_0->biv; ba; ba = ba->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/loop.c:6197:27: error: use of undeclared identifier 'ba'
for ( ba = bl_0->biv; ba; ba = ba->next_iv ) 
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_giv/src/obj/loop.o] Error 1
